# novatb.tof.alg_efficiency

./: Access.cpp  Access.h  CFDHitFinderAlg.h  CMakeLists.txt  DrawWaveform.C  DrawWaveform.h  Eff.C  efficiency.cpp
